--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         <activity
             android:name=".activity_sendmsg"
             android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".detail_msg"></activity>
+        <activity android:name=".detail_msg"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
