--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,18 +22,30 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
         <activity android:name=".frag1_sendmsg" />
         <activity android:name=".DefaultItemAnimator" />
         <activity
             android:name=".activity_sendmsg"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
         <activity
             android:name=".activity_grp"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <activity android:name=".detail_msg"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".detail_msg"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+        <activity
+            android:name=".activity_adduser"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
