--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
         }
     }
     dependencies {
-
+        classpath 'com.google.gms:google-services:4.0.0'
         classpath 'com.android.tools.build:gradle:3.1.3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
