--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,11 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
+    signingConfigs{
+        release{
+
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -29,6 +34,6 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:support-vector-drawable:26.1.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
-    implementation 'com.google.firebase:firebase-core:16.0.0'
+    implementation 'com.google.firebase:firebase-core:12.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
