Update Update Fragment3 // Merge branch 'master' of https://github.com/ssgkmd/Noti into SongP

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
         release {
             keyAlias 'myapp'
             keyPassword 'gyqlsdlstjr12!@'
-            storeFile file('/Users/simhyobin/keystore/myapp.jks.zip')
+            storeFile file('C:/Users/insec/myapp.jks')
             storePassword 'gyqlsdlstjr12!@'
         }
     }
