--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
         release {
             keyAlias 'myapp'
             keyPassword 'gyqlsdlstjr12!@'
-            storeFile file('C:/Users/insec/myapp.jks')
+            storeFile file('/Users/simhyobin/keystore/myapp.jks.zip')
             storePassword 'gyqlsdlstjr12!@'
         }
     }
