--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,12 @@ android {
         }
     }
 }
-
+configurations{
+    all{
+        exclude module: 'httpclient'
+        exclude module: 'commons-logging'
+    }
+}
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:design:26.1.0'
@@ -39,5 +44,8 @@ dependencies {
     implementation 'com.android.support:support-vector-drawable:26.1.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.google.firebase:firebase-core:12.0.1'
+    implementation 'com.google.api-client:google-api-client-android:1.23.0'
+    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
+    implementation 'com.google.apis:google-api-services-calendar:v3-rev305-1.23.0'
 }
 apply plugin: 'com.google.gms.google-services'
